--- a/WiluxFriendManager/WiluxFriendManager.csproj
+++ b/WiluxFriendManager/WiluxFriendManager.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
+		<RootNamespace>MyAwesomePlugin</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
