--- a/WiluxFriendManager/WiluxFriendManager.csproj
+++ b/WiluxFriendManager/WiluxFriendManager.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<RootNamespace>MyAwesomePlugin</RootNamespace>
+		<RootNamespace>FriendManager</RootNamespace>
+		<AssemblyName>FriendManager</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
 		<PackageReference Include="JetBrains.Annotations" PrivateAssets="all" />
+		<PackageReference Include="SteamKit2" />
 		<PackageReference Include="System.Composition.AttributedModel" IncludeAssets="compile" />
 	</ItemGroup>
 
