--- a/WiluxFriendManager/WiluxFriendManager.csproj
+++ b/WiluxFriendManager/WiluxFriendManager.csproj
@@ -8,7 +8,9 @@
 	<ItemGroup>
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
 		<PackageReference Include="JetBrains.Annotations" PrivateAssets="all" />
+		<PackageReference Include="Newtonsoft.Json" />
 		<PackageReference Include="SteamKit2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="System.Composition.AttributedModel" IncludeAssets="compile" />
 	</ItemGroup>
 
