rename and try again

--- a/.github/asf-bump.yml
+++ b/.github/asf-bump.yml
@@ -2,7 +2,7 @@
 # Please note that this DOES NOT update the actual commit the submodule itself is binded to, as that part is the responsibility of the developer or chosen dependencies management tool (such as Renovate or Dependabot), that will actually build and test whether the plugin project requires any kind of corrections before doing so
 # Because of that, commit created through this workflow can't possibly create any kind of build regression, as we only limit the actual commit the above action can actually update to
 # Note: If you'd like to change the default channel from stable to pre-releases, simply change RELEASE_TYPE
-name: Plugin-bump-asf-reference
+name: bump-asf-reference
 
 on:
   schedule:
